Fixed word-break on Emery item on agenda.

--- a/src/style.scss
+++ b/src/style.scss
@@ -295,6 +295,7 @@ header {
   h2 {
     color: $dark-blue;
   }
+  
   .speakers-box {
     text-align: center;
     margin-bottom: 70px;
@@ -517,7 +518,7 @@ header {
     color: $dark-blue;
   }
   .agenda {
-    padding: 50px 55px 20px 80px;
+    padding: 50px 53px 20px 80px;
     border-radius: 6px;
     position: relative;
     background-color: $cream;
@@ -555,12 +556,18 @@ header {
         }
       }
     }
+
+    .col-12.no-padding-right {
+      padding-right: 0;
+    }
     .hour,
+   
     .description {
       p {
         text-align: left;
         color: $blue;
         transition: all .4s ease-in-out;
+        letter-spacing: -0.01em;
       }
     }
     .hour {
